# docker

./: compose.yaml
learn-generative-ai/05_microservices_all_in_one_platform/14_docker/02_containerization/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
my_fastapi_project/: Dockerfile.dev  pyproject.toml  requirements.txt
