[tool.poetry]
name = "my-fastapi-project"
version = "0.1.0"
description = ""
authors = ["sultanshah76 <sultanqaiser835@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
